fixed overflow

--- a/src/app.scss
+++ b/src/app.scss
@@ -5,6 +5,7 @@
 body{
     font-family: 'Satoshi', sans-serif;
     color: #333;
+    overflow: hidden;
 }
 .article-content {
     h1 {
